@@ -1,3 +1,13 @@
+2015-03-18  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Remove unused "preprocessor" parameter to sub-CodeGenerators
+        https://bugs.webkit.org/show_bug.cgi?id=142793
+
+        Reviewed by Darin Adler.
+
+        * WebKitTestRunner/InjectedBundle/Bindings/CodeGeneratorTestRunner.pm:
+        (new):
+
 2015-03-18  Csaba Osztrogonác  <ossy@webkit.org>
 
         [EFL] Bump gstreamer version to 1.4.4
